# FIR_filtering

./: .gitignore  CMakeLists.txt  Questions.txt  README.txt  Requirements.docx
doc/: 00_Requirements.txt  01_Evaluation.txt  02_Outlook.txt  Questions.txt  Requirements.txt.txt
filter_dll/: CMakeLists.txt
filter_dll/include/: FilterAPI.h  FilterStatistics.h
filter_dll/source/: FilterAPI.cpp  FilterStatistics.cpp
test_app/: CMakeLists.txt
test_app/include/: Application.h  TestApp.h  Testcases.h
test_app/source/: Application.cpp  TestApp.cpp  Testcases.cpp  main.cpp
